--- a/resources/sass/components/_timeline.scss
+++ b/resources/sass/components/_timeline.scss
@@ -57,6 +57,8 @@ $thickness: 4px;
 
     &__content {
         padding: 16px 0;
+        max-width: 35em;
+        margin: 0 auto;
     }
 
     &__item {
